--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -40,7 +40,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Infinito Q</a>
+        <a href="javascript : window.location.reload(false)" class="navbar-brand">Infinito Q</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav navbar-right">
