Question Paper Management

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="stylesheets/lib/ng-tags-input.bootstrap.min.css"/>
   <link rel="stylesheet" href="stylesheets/lib/nga.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-minimal.css"/>
+  <link rel="icon" href="stylesheets/favicon.ico"/>
   <!-- Custom Style sheet -->
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
@@ -40,9 +41,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="javascript : window.location.reload(false)" class="navbar-brand">Infinito Q</a>
+        <a href="javascript : window.location.reload(true)" class="navbar-brand">Infinito Q</a>
       </div>
-      <div class="collapse navbar-collapse" id="navbar-content"> 
+      <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
