--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -29,6 +29,7 @@
   <script src="javascripts/lib/rzslider.min.js"></script>
   <script src="javascripts/lib/ng-tags-input.min.js"></script>
   <script src="javascripts/lib/ui-bootstrap-tpls-1.1.2.min.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <base href="/">
 </head>
 <body>
@@ -40,9 +41,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">Infinito Q</a>
+        <a href="javascript:window.location.href=window.location.href" class="navbar-brand">Infinito Q</a>
       </div>
-      <div class="collapse navbar-collapse" id="navbar-content"> 
+      <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="signout" class="pull-right">
