--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html ng-app="QuestionManagerApp">
 <head>
-  <base href="/" />
   <meta charset="utf-8">
   <title>Question Manager</title>
   <!-- Bootstrap Style Sheet -->
@@ -17,11 +16,11 @@
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
   <!-- Angular JS -->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js" charset="utf-8"></script>-->
-  <script src="javascripts/lib/angular.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js" charset="utf-8"></script>
+  <!-- <script src="javascripts/lib/angular.js"></script> -->
   <!-- Angular Route JS -->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js" charset="utf-8"></script>-->
-  <script src="javascripts/lib/angular-route.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.js" charset="utf-8"></script>
+  <!-- <script src="javascripts/lib/angular-route.js"></script> -->
   <!-- Angular Animate for Bootstrap animation-->
   <!--<script src="https://code.angularjs.org/1.5.3/angular-animate.min.js" charset="utf-8"></script>-->
   <script src="javascripts/lib/angular-animate.js"></script>
