Brand Name Click Reload Error Fixed

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -41,7 +41,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="javascript:window.reload(true)" class="navbar-brand">Infinito Q</a>
+        <a href="javascript:location.reload(true)" class="navbar-brand">Infinito Q</a>
       </div>
       <div class="collapse navbar-collapse" id="navbar-content">
         <ul class="nav navbar-nav navbar-right">
