--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -60,6 +60,7 @@
   <script src="javascripts/angular_app.js"></script>
   <script src="javascripts/Controllers/indexController.js"> </script>
   <script src="javascripts/Controllers/editQuestionController.js"> </script>
+  <script src="javascripts/Controllers/editQuestionPaperController.js"> </script>
   <script src="javascripts/Controllers/patternController.js"> </script>
   <script src="javascripts/Controllers/patternModalController.js"> </script>
   <script src="javascripts/Controllers/questionPaperController.js"> </script>
