Question Paper Modal - Initial Commit

--- a/Infinito-Qs/QuestionManagement/public/questionModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionModal.html
@@ -1,25 +1,35 @@
 <div class="modal-header">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-  <h4 class="modal-title">{{QuestionPaperName}}</h4>
+  <button type="button" class="close" ng-click="editQuestionClose()" aria-hidden="true">&times;</button>
+  <h4 class="modal-title">{{QuestionPaper.name}}</h4>
 </div>
 <div class="modal-body">
 
   <div class="form-group">
     <label for="QuestionPaperName">Name: </label><strong class="required text-danger">*</strong>
-    <input type="text" class="form-control" name="QuestionPaperName" ng-model="QuestionPaperName" value={{QuestionPaper.Name}} required>
-    </input>
-  </div>
+    <input type="text" class="form-control" name="QuestionPaperName" value={{QuestionPaper.name}} required>
+  </input>
+</div>
 
-  <div class="wrap">
-    <div class="form-inline">
-      <label for="topicId">Topics:</label><br/>
-      <div ng-if="QuestionPaper.topics.length > 0" ng-repeat="topic in QuestionPaper.topics" class="well well-sm topics">
-        {{topic}}
-      </div>
+<div class="wrap" ng-if="QuestionPaper.topics.length > 0">
+  <div class="form-inline">
+    <label for="topicId">Topics:</label><br/>
+    <div ng-repeat="topic in QuestionPaper.topics" class="well well-sm topics">
+      {{topic}}
     </div>
   </div>
+</div>
 
-  <table class="table table-bordered" ng-hide="!Questions.length">
+<div class="wrap" ng-if="QuestionPaper.tournaments.length > 0">
+  <div class="form-inline">
+    <label for="topicId">Tournaments Used :</label><br/>
+    <div ng-repeat="tournament in QuestionPaper.tournaments" class="well well-sm topics">
+      {{tournament}}
+    </div>
+  </div>
+</div>
+
+<div class="wrap" ng-hide="!Questions.length">
+  <table class="table table-bordered" >
     <thead>
       <tr>
         <th></th>
@@ -30,7 +40,22 @@
       <tr ng-repeat="Question in Questions">
         <td><input type="checkbox" align="left"></td>
         <td>{{Question.question}}</td>
+        <td>
+          <button type="button" class="btn btn-xs btn-default command-edit"  ng-click ="editQuestionPaper($index)" title="Edit Question Paper">
+            <span class="glyphicon glyphicon-pencil"></span>
+          </button>
+          <button type="button" class="btn btn-xs btn-default command-delete" ng-click ="deleteQuestion($index)" title="Remove Question">
+            <span class="glyphicon glyphicon-trash"></span>
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
+</div>
+
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" ng-click="editQuestionClose()">Close</button>
+  <button type="button" class="btn btn-primary" ng-click="saveQuestionPaper()">Save changes</button>
+</div>
+
 </div>
