--- a/Infinito-Qs/QuestionManagement/public/QuestionPaperManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionPaperManager.html
@@ -17,13 +17,13 @@
       <tbody>
         <tr ng-repeat="questionPaper in QuestionPapers" ng-class="{pickedInTournament : questionPaper.IsPickedInTournament, notPickedInTournament : !questionPaper.IsPickedInTournament}">
           <td><input type="checkbox" align="left" ng-model="quesSelected[0]" ng-click="selectQuestion(quesSelected[0], 0)"></td>
-          <td>{{questionPaper.Name}}</td>
+          <td>{{questionPaper.name}}</td>
           <td>{{questionPaper.topics.join(', ')}}</td>
           <td width='9%'>
-            <button type="button" class="btn btn-xs btn-default command-edit"  ng-click ="onEditClick($index)" title="Edit Question Paper">
+            <button type="button" class="btn btn-xs btn-default command-edit"  ng-click ="editQuestionPaper($index)" title="Edit Question Paper">
               <span class="glyphicon glyphicon-pencil"></span>
             </button>
-            <button type="button" class="btn btn-xs btn-default command-delete" ng-click ="onQuestionPaperDelete($index)" ng-disabled = "{{questionPaper.IsPickedInTournament}}" title="{{questionPaper.IsPickedInTournament ? 'Question Paper used in a Tournament cannot be deleted' : 'Delete Question Paper'}}">
+            <button type="button" class="btn btn-xs btn-default command-delete" ng-click ="deleteQuestionPaper($index)" ng-disabled = "{{questionPaper.IsPickedInTournament}}" title="{{questionPaper.IsPickedInTournament ? 'Question Paper used in a Tournament cannot be deleted' : 'Delete Question Paper'}}">
               <span class="glyphicon glyphicon-trash"></span>
             </button>
           </td>
